@@ -281,6 +281,9 @@ WV_MENU_TDSCALEN,
 WV_MENU_TDSCALEP,
 WV_MENU_TDSCALEF,
 WV_MENU_HWH,
+#ifdef MAC_INTEGRATION
+WV_MENU_HWM,
+#endif
 WV_MENU_HWV,
 WV_MENU_NUMITEMS
 };
